<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_trash"
        android:title="tr"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_done"
        android:icon="@drawable/ic_done"
        android:title="done"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_done_text"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_edit_text"
        android:title="@string/upravit"
        app:showAsAction="always" />

</menu>